# pydemic

./: .codeclimate.yml  .coveragerc  .gitignore  README.rst  pyproject.toml  tasks.py  tox.ini
.github/workflows/: pythonpackage.yml
examples/: br_report.py  seir_example.py  seir_report_example.py
notebooks/: br-states-report.ipynb  br.xlsx  demography.ipynb  descriptive-epidemiology.ipynb  intro.ipynb  region-report.ipynb  report-br.ipynb  sp.xlsx
pydemic/: __init__.py  __main__.py  all.py  api.py  cache.py  config.py  db.py  demography.py  docs.py  exceptions.py  expr_compiler.py  formulas.py  jupyter.py  logging.py  math.py  packages.py  region.py  solver.py  testing.py  types.py
pydemic/api/: __init__.py  covid19.py
pydemic/cli/: api.py  main.py
pydemic/clinical_models/: __init__.py  crude_FR.py  delayed_hospitalization.py  hospitalization_with_delay.py  hospitalization_with_overflow.py  hospitalization_with_overload.py  model.py  utils.py
pydemic/diseases/: __init__.py  covid.py  covid19_api.py  covid19_class.py  covid19_disease.py  disease.py  disease_class.py  disease_params.py  utils.py
pydemic/empirical/: __init__.py  epidemiology.py  epidemiology_group.py  functions.py  pandas_accessor.py  trend_inference.py  utils.py
pydemic/fitting/: K.py  R0.py  Rt.py  __init__.py  epidemic_curves.py  epidemic_curves_rt.py  exponential_growth.py  (+4 more)
tests/: conftest.py  test_cache.py  test_clinical.py  test_composite_region.py  test_empirical.py  test_mixins.py  test_model_group.py  test_models.py  test_models_meta.py  test_mods.py  test_types.py  test_utils.py
(+107 files in other folders)
