[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "pydemic"
dist-name = "pydemic-models"
author = "Fábio Macêdo Mendes"
author-email = "fabiomacedomendes@gmail.com"
home-page = "http://github.com/pydemic/pydemic"
classifiers = [ "License :: OSI Approved :: MIT License" ]
requires = [
  "mundi",
  "mundi-demography",
  "mundi-healthcare",
  "joblib",
  "click~=7.0",
  "matplotlib~=3.0",
  "numpy~=1.0",
  "pandas~=1.0",
  "requests~=2.0",
  "seaborn~=0.10",
  "statsmodels",
]

[tool.flit.metadata.requires-extra]
dev = [
  "black",
  "invoke~=1.4",
  "flake8",
  "pytest~=5.4",
  "pytest-cov~=2.8",
]

[tool.black]
line-length = 100
